--- a/index.html
+++ b/index.html
@@ -50,11 +50,7 @@
       moins.addEventListener('click', supprimer);
     
       function supprimer() {
-        const reservations = document.querySelectorAll('.reserv');
-        if (reservations.length > 1) {
-          const dernierReservation = reservations[reservations.length - 1];
-          dernierReservation.parentNode.removeChild(dernierReservation);
-        }
+        console.log('supprimer');
       }
     </script>
     
